--- a/404.html
+++ b/404.html
@@ -6,7 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/umi.e15f281e.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/Euclid-Twin/sodaxton@0.0.3/umi.e15f281e.css"
+    />
     <script>
       window.routerBase = "/";
     </script>
@@ -18,6 +21,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.9730e6af.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Euclid-Twin/sodaxton@0.0.3/umi.5ef40126.js"></script>
   </body>
 </html>
